add random forest payrate class model

--- a/notebooks/Data_wrangling/Random_Forest_Medicare2013.ipynb
+++ b/notebooks/Data_wrangling/Random_Forest_Medicare2013.ipynb
@@ -2939,6 +2939,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "med"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
