clean folders of interim notebooks

--- a/models/Feature_selection.ipynb
+++ b/models/Feature_selection.ipynb
@@ -746,7 +746,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fea4527d7d0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fc762e4ac50>"
       ]
      },
      "execution_count": 18,
@@ -887,35 +887,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Determining Collinearity Between Features. Not important for classification, but it might affect my interpretation of results."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "f, (ax1,ax2,ax3, ax4, ax5) = plt.subplots(1,5, sharey=True, figsize=(20, 10))\n",
-    "ax1.scatter('total_allowed_payment', 'percentage_rate', data=med, color='red', label='black');\n",
-    "\n",
-    "ax2.scatter('total_medicare_payment', 'percentage_rate', data=med, color='blue', label='white');\n",
-    "ax3.scatter('total_medicare_standardized_payment', 'percentage_rate', data=med, color='blue', label='white');\n",
-    "ax4.scatter('medicare_payment_per_person', 'percentage_rate', data=med, color='blue', label='white');\n",
-    "ax5.scatter('medicare_payment_per_service', 'percentage_rate', data=med, color='blue', label='white');\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "f.suptitle('Determining Collinearity between Percentage_rate and Medicare Payment Features');\n",
-    "#ax1.set(xlabel='Black Deaths',ylabel='Total Deaths');\n",
-    "#ax2.set(xlabel='White Deaths')\n",
-    "#ax3.set(xlabel = 'Hispanic Deaths')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "I want to focus only on the percentage Medicare paid of the submitted charges to look for patterns in this rate that may have unintended correlations with demographics. Leaving actual payments in will make the model too good at predicting payrates."
    ]
   },
@@ -944,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +933,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1010,7 +981,7 @@
        " 'payrate_level']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1043,10 +1014,7 @@
     "scaler = MinMaxScaler()\n",
     "z = df.drop(columns = list(df.select_dtypes('object').columns))\n",
     "for i in z.columns:\n",
-    "    if 'percent_' in i:\n",
-    "        continue\n",
-    "    else:\n",
-    "        z[i] = scaler.fit_transform(np.array(df[i]).reshape(-1,1))"
+    "    z[i] = scaler.fit_transform(np.array(df[i]).reshape(-1,1))"
    ]
   },
   {
@@ -1058,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,27 +1040,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['number_of_hcpcs', 'number_of_services', 'total_beneficiaries',\n",
-       "       'total_submitted_charges', 'total_allowed_payment',\n",
-       "       'avg_beneficiary_age', 'avg_hcc_risk_score',\n",
+       "       'total_submitted_charges', 'avg_beneficiary_age', 'avg_hcc_risk_score',\n",
        "       'submitted_charges_per_person', 'services_per_person',\n",
-       "       'submitted_charges_per_service',\n",
-       "       ...\n",
-       "       'subregion_Pacific', 'subregion_South Atlantic',\n",
-       "       'subregion_West North Central', 'subregion_West South Central',\n",
-       "       'majority_majority_asian', 'majority_majority_black',\n",
-       "       'majority_majority_hispanic', 'majority_majority_native_amer',\n",
-       "       'majority_majority_white', 'majority_no_majority'],\n",
-       "      dtype='object', length=189)"
+       "       'submitted_charges_per_service', 'total_pop', 'percent_black',\n",
+       "       'percent_white', 'percent_native_amer', 'percent_hispanic',\n",
+       "       'percent_other', 'percent_asian', 'percent_two_or_more_races'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,141 +1075,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from scipy.stats import chisquare\n",
     "chis = []\n",
     "for i in z.columns:\n",
-    "    j = chi2(np.array(z[i]).reshape(-1,1), y)\n",
+    "    j = chisquare(np.array(z[i]).reshape(-1,1), y)\n",
     "    chis.append(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>features</th>\n",
-       "      <th>chi2</th>\n",
-       "      <th>p_values</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>119</th>\n",
-       "      <td>provider_type_Mass Immunizer Roster Biller</td>\n",
-       "      <td>642531.134558</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>entity_code_O</td>\n",
-       "      <td>584336.163749</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>82</th>\n",
-       "      <td>provider_type_Centralized Flu</td>\n",
-       "      <td>238586.530387</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>85</th>\n",
-       "      <td>provider_type_Certified Registered Nurse Anest...</td>\n",
-       "      <td>101933.494517</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>provider_type_Anesthesiology</td>\n",
-       "      <td>87096.149145</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>86</th>\n",
-       "      <td>provider_type_Chiropractic</td>\n",
-       "      <td>59365.578698</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>provider_type_Optometry</td>\n",
-       "      <td>49684.437403</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>provider_type_Emergency Medicine</td>\n",
-       "      <td>43682.158902</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>entity_code_I</td>\n",
-       "      <td>34539.909445</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146</th>\n",
-       "      <td>provider_type_Physician Assistant</td>\n",
-       "      <td>17714.791263</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              features           chi2  \\\n",
-       "119         provider_type_Mass Immunizer Roster Biller  642531.134558   \n",
-       "19                                       entity_code_O  584336.163749   \n",
-       "82                       provider_type_Centralized Flu  238586.530387   \n",
-       "85   provider_type_Certified Registered Nurse Anest...  101933.494517   \n",
-       "77                        provider_type_Anesthesiology   87096.149145   \n",
-       "86                          provider_type_Chiropractic   59365.578698   \n",
-       "134                            provider_type_Optometry   49684.437403   \n",
-       "95                    provider_type_Emergency Medicine   43682.158902   \n",
-       "18                                       entity_code_I   34539.909445   \n",
-       "146                  provider_type_Physician Assistant   17714.791263   \n",
-       "\n",
-       "     p_values  \n",
-       "119       0.0  \n",
-       "19        0.0  \n",
-       "82        0.0  \n",
-       "85        0.0  \n",
-       "77        0.0  \n",
-       "86        0.0  \n",
-       "134       0.0  \n",
-       "95        0.0  \n",
-       "18        0.0  \n",
-       "146       0.0  "
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "'rv_frozen' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-c63b9d6b849c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_rows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m pd.DataFrame({'features': list(z.columns),\n\u001b[0;32m----> 3\u001b[0;31m              \u001b[0;34m'chi2'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m              \u001b[0;34m'p_values'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m              }).sort_values('chi2', ascending=False).head(10)\n",
+      "\u001b[0;32m<ipython-input-33-c63b9d6b849c>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax_rows\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m pd.DataFrame({'features': list(z.columns),\n\u001b[0;32m----> 3\u001b[0;31m              \u001b[0;34m'chi2'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m              \u001b[0;34m'p_values'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mchis\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m              }).sort_values('chi2', ascending=False).head(10)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'rv_frozen' object is not subscriptable"
+     ]
     }
    ],
    "source": [
